--- a/Ochuba CV.html
+++ b/Ochuba CV.html
@@ -5,9 +5,10 @@
 <title> SAMUEL'S CV</title>
 </head>
 <body>
+        <!–– this is the link to my cloudinary account-->
     <center> <img src="https://res.cloudinary.com/esambooks/image/upload/v1566525997/Screenshot_2019-08-23_2_samenstein_SamuelOchuba_Twitter_si0d2h.png" alt=" PROFILE PICTURE"> </center>
    <center><h1><b>OCHUBA SAMUEL</b></h1></center> 
-   <p1><center>5/6 Matthew Street, Surulere, Lagos •  08187143963  •  esambooks@gmail.com</center></p1>
+   <p1><center>5/6 Matthew Street, Surulere,  Lagos •  08187143963  •  esambooks@gmail.com</center></p1>
    <br>
 
    <hr width="80%" color="black">
