for task 4: updated the html to contain a form

--- a/Ochuba CV.html
+++ b/Ochuba CV.html
@@ -137,9 +137,22 @@
         </div>
       </article>
     </section>
+
+    <div class = "contact-form">
+     <center> <form id="contact-form" method="POST" action="">
+        <input name="name" type="text" class="form-control" pattern=".{4,}" placeholder="Name" required><br>
+        <input name="email" type="email" class="form-control" placeholder="Email" required><br>
+        <input name="name" type="text" class="form-control" placeholder="Title" required><br>
+        <textarea name="message" class="form-control" minlength="20"  placeholder="Message" rows="4" required>
+       </textarea>
+       <input type="submit" class="form-control submit" value="SEND MESSAGE">
+      </form>
+    </center>
+    </div>
   </main>
+
   <footer>
-    <p>Created by: <a href="https://twitter.com/SamuelOchuba">@samuelOchuba</a>  / <a href="https://www.linkedin.com/in/samuel-ochuba-bb0b6a100/">LinkedIn</a> / 2018 </p>
+    <p>Created by: <a href="https://twitter.com/SamuelOchuba">@samuelOchuba</a>  / <a href="https://www.linkedin.com/in/samuel-ochuba-bb0b6a100/">LinkedIn</a> / 2019 </p>
   </footer>
 </body>
 </html>
