--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
     </section>
 
     <div class = "contact-form">
-     <center> <form id="contact-form" method="POST" action="">
+     <center> <form id="contact-form" method="POST" action="contact-form-handler.php">
         <input name="name" type="text" class="form-control" pattern=".{4,}" placeholder="Name" required><br>
         <input name="email" type="email" class="form-control" placeholder="Email" required><br>
-        <input name="name" type="text" class="form-control" placeholder="Title" required><br>
+        <input name="title" type="text" class="form-control" placeholder="Title" required><br>
         <textarea name="message" class="form-control" minlength="20"  placeholder="Message" rows="4" required>
        </textarea>
        <input type="submit" class="form-control submit" value="SEND MESSAGE">
